# basler-synchronization

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: cam0lens0.yaml  cam0lens1.yaml  cam1lens0.yaml  cam1lens1.yaml  test0.yaml  test1.yaml
launch/: basler_synch.launch  basler_test0.launch  basler_test1.launch  calibrate.launch
src/: trigger.ino
